--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,6 +4,8 @@ header {
   align-items: center;
   padding: 1rem 2rem;
   border-bottom: 1px solid var(--text-color);
+  gap: 20px;
+  flex-wrap: wrap;
 
   h1 {
     margin: 0;
