--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 :root {
   --bg-color: #ffffff;
+  --button-bg-color: #ffffff;
   --text-color: #000000;
   --accent-color: #fcee21;
 
@@ -7,7 +8,8 @@
 }
 
 [data-theme='dark'] {
-  --bg-color: #222222;
+  --bg-color: #000;
+  --button-bg-color: #222222;
   --text-color: #f5f5f5;
   --accent-color: #fcee21;
 }
