--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+#root {
+  width: 100%;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -11,6 +15,44 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  button {
+    appearance: none;
+    border: 1px solid var(--text-color);
+    background-color: var(--button-bg-color);
+    border-radius: 15px;
+    box-sizing: border-box;
+    color: var(--text-color);
+    cursor: pointer;
+    display: inline-block;
+    font-weight: 600;
+    line-height: normal;
+    margin: 0;
+    min-width: 0;
+    padding: 15px;
+    outline: none;
+    text-align: center;
+    text-decoration: none;
+    transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    will-change: transform;
+  }
+
+  button:disabled {
+    pointer-events: none;
+  }
+
+  button:hover {
+    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+    transform: translateY(-2px);
+  }
+
+  button:active {
+    box-shadow: none;
+    transform: translateY(0);
+  }
 }
 
 body {
@@ -19,5 +61,10 @@ body {
   place-items: center;
   justify-content: center;
   min-width: 320px;
-  min-height: 100vh;
+
+  .modal-image-fullScreen {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
