Update GMS, Technologies Buttons, Tooltip

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 :root {
   --bg-color: #ffffff;
   --button-bg-color: #ffffff;
+  --button-box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
   --text-color: #000000;
   --accent-color: #fcee21;
 
@@ -10,6 +11,7 @@
 [data-theme='dark'] {
   --bg-color: #000;
   --button-bg-color: #222222;
+  --button-box-shadow: rgba(255, 255, 255, 0.25) 0 8px 15px;
   --text-color: #f5f5f5;
   --accent-color: #fcee21;
 }
@@ -27,6 +29,10 @@ section {
   padding: 2rem 1rem;
   max-width: 960px;
   margin: auto;
+}
+
+h1 {
+  margin: 0 2rem;
 }
 
 @media (max-width: 600px) {
