--- a/src/components/Proyect/Proyect.css
+++ b/src/components/Proyect/Proyect.css
@@ -4,11 +4,17 @@
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  gap: 30px;
 
   @media(max-width: 1024px) {
     flex-wrap: wrap;
     margin: 0;
+  }
+
+  .technologies-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin: 20px 0px 45px 0px;
   }
 
   .proyect-image-container {
@@ -18,18 +24,18 @@
           border-radius: 15px;
           img {
             border-radius: 15px;
-            width: 95%;
 
             @media(max-width: 768px) {
                 width: 85%;
             }
           }
         }
-        .control-prev.control-arrow::before {
-          border-right: 8px solid var(--text-color);
-        }
-        .control-next.control-arrow::before {
-          border-left: 8px solid var(--text-color);
+        .control-arrow, .control-arrow:hover {
+            background-color: #000;
+            opacity: .4;
+            transform: unset;
+            height: 50%;
+            top: 25%;
         }
       }
     }
