--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@
   }
 
   button:hover {
-    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+    box-shadow: var(--button-box-shadow);
     transform: translateY(-2px);
   }
 
