--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,6 +6,10 @@ header {
   gap: 20px;
   flex-wrap: wrap;
 
+  @media (max-width: 1024px) {
+    gap: 0;
+  }
+
   h1 {
     margin: 0;
     font-size: 1.5rem;
@@ -18,6 +22,10 @@ header {
     align-items: center;
     gap: 20px;
 
+    @media (max-width: 768px) {
+      flex-wrap: wrap;
+    }
+
     .dark-mode-button {
       background: none;
       display: flex;
@@ -29,6 +37,10 @@ header {
       border-radius: 40px;
       height: fit-content;
       background-color: var(--button-bg-color);
+
+      @media (max-width: 768px) {
+        padding: 0.5em;
+      }
     }
   }
 }
