--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -4,6 +4,7 @@
   flex-direction: row;
   align-items: center;
   gap: 20px;
+  padding: 2rem 1rem 0 1rem;
 
   @media (max-width: 768px) {
     flex-direction: column;
@@ -33,6 +34,7 @@
     img {
       width: 100%;
       border-radius: 50px;
+      box-shadow: var(--button-box-shadow);
     }
   }
 }
