--- a/src/components/Proyect/Proyect.css
+++ b/src/components/Proyect/Proyect.css
@@ -1,6 +1,6 @@
 .proyect {
-  padding: 2rem 1rem;
-  margin: 0rem 1rem;
+  padding: 0 1rem;
+  margin: 0 1rem;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -40,5 +40,10 @@
         }
       }
     }
+  }
+
+  .MuiDivider-root {
+    margin-top: 30px;
+    border: 1.5px solid var(--text-color);
   }
 }
