--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,5 +1,5 @@
 .contact-container {
-  padding: 2rem 1rem;
+  padding: 1rem 1rem 3rem 1rem;
   margin: 1rem 1rem;
   display: flex;
   flex-direction: row;
