--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 :root {
-  --bg-color: #ffffff;
+  --bg-color: linear-gradient(to right, #ffffff 30%, #efeeec 75%, #e9e9e7 100%);
   --button-bg-color: #ffffff;
   --button-box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
   --text-color: #000000;
@@ -10,7 +10,7 @@
 }
 
 [data-theme="dark"] {
-  --bg-color: #000;
+  --bg-color: linear-gradient(to right, #343434 0%, black 100%);;
   --button-bg-color: #222222;
   --button-box-shadow: rgba(255, 255, 255, 0.25) 0 8px 15px;
   --text-color: #f5f5f5;
@@ -22,9 +22,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: var(--font-main);
-  background-color: var(--bg-color);
+  background: var(--bg-color);
   color: var(--text-color);
-  transition: background-color 0.3s ease, color 0.3s ease;
+  transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 section {
