--- a/src/index.css
+++ b/src/index.css
@@ -61,11 +61,20 @@ body {
   display: flex;
   place-items: center;
   justify-content: center;
-  min-width: 320px;
 
   .modal-image-fullScreen {
     display: flex;
     align-items: center;
     justify-content: center;
   }
+}
+
+#tsparticles {
+  position: fixed !important;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  pointer-events: none; /* Para que no bloquee clicks */
 }
